# simplelib

./: CMakeLists.txt  README.md
lib/include/: FormattedOutput.hh  FormattedOutputBuffer.hh  Random.hh
lib/src/: FormattedOutput.cc  FormattedOutputBuffer.cc  Random.cc
test/: FormattedOutput.cc  main.cc
test/src/: FormattedOutput.cc
tests/: FormattedOutput.cc  FormattedOutputBuffer.cc  Random.cc
